test_regress/t/t_math_repl_bad.out
%Error: t/t_math_repl_bad.v:12:14: Replication value of 0 is only legal under a concatenation (IEEE 1800-2017 11.4.12.1)
                                 : ... In instance t
   12 |       o = {0 {1'b1}};   
      |              ^
%Warning-WIDTH: t/t_math_repl_bad.v:12:9: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's REPLICATE generates 1 bits.
                                        : ... In instance t
   12 |       o = {0 {1'b1}};   
      |         ^
                ... For warning description see https://verilator.org/warn/WIDTH?v=latest
                ... Use "/* verilator lint_off WIDTH */" and lint_on around source to disable this message.
%Error: t/t_math_repl_bad.v:13:12: Expecting expression to be constant, but can't convert a TESTPLUSARGS to constant.
                                 : ... In instance t
   13 |       o = {$test$plusargs("NON-CONSTANT") {1'b1}};   
      |            ^~~~~~~~~~~~~~
%Error: t/t_math_repl_bad.v:13:43: Replication value isn't a constant.
                                 : ... In instance t
   13 |       o = {$test$plusargs("NON-CONSTANT") {1'b1}};   
      |                                           ^
%Error: Internal Error: t/t_math_repl_bad.v:13:9: ../V3Width.cpp:#: Node has no type
                                                : ... In instance t
   13 |       o = {$test$plusargs("NON-CONSTANT") {1'b1}};   
      |         ^
